jtools/grammar/QUERYParser.py
# Generated from jtools/grammar/QUERY.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class QUERYParser ( Parser ):

    grammarFileName = "QUERY.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'$'", "'('", "','", "')'", "':'", 
                     "'true'", "'false'", "'null'", "'['", "']'", "'{'", 
                     "'}'", "'-'", "'+'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "DIGITS", "LETTERS", "STRING", "WS" ]

    RULE_query = 0
    RULE_query_part = 1
    RULE_query_field = 2
    RULE_special = 3
    RULE_special_name = 4
    RULE_arguments = 5
    RULE_argument = 6
    RULE_value = 7
    RULE_list_value = 8
    RULE_set_value = 9
    RULE_object_value = 10
    RULE_pair = 11
    RULE_key = 12
    RULE_number = 13
    RULE_name = 14

    ruleNames =  [ "query", "query_part", "query_field", "special", "special_name", 
                   "arguments", "argument", "value", "list_value", "set_value", 
                   "object_value", "pair", "key", "number", "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    DIGITS=17
    LETTERS=18
    STRING=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QUERYParser.Query_partContext)
            else:
                return self.getTypedRuleContext(QUERYParser.Query_partContext,i)


        def getRuleIndex(self):
            return QUERYParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = QUERYParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.query_part()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QUERYParser.T__0:
                self.state = 31
                self.match(QUERYParser.T__0)
                self.state = 32
                self.query_part()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query_field(self):
            return self.getTypedRuleContext(QUERYParser.Query_fieldContext,0)


        def special(self):
            return self.getTypedRuleContext(QUERYParser.SpecialContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_query_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_part" ):
                listener.enterQuery_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_part" ):
                listener.exitQuery_part(self)




    def query_part(self):

        localctx = QUERYParser.Query_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query_part)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QUERYParser.T__6, QUERYParser.T__7, QUERYParser.T__8, QUERYParser.T__13, QUERYParser.T__15, QUERYParser.DIGITS, QUERYParser.LETTERS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.query_field()
                pass
            elif token in [QUERYParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.special()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Query_fieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(QUERYParser.NameContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_query_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery_field" ):
                listener.enterQuery_field(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery_field" ):
                listener.exitQuery_field(self)




    def query_field(self):

        localctx = QUERYParser.Query_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecialContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def special_name(self):
            return self.getTypedRuleContext(QUERYParser.Special_nameContext,0)


        def arguments(self):
            return self.getTypedRuleContext(QUERYParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_special

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecial" ):
                listener.enterSpecial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecial" ):
                listener.exitSpecial(self)




    def special(self):

        localctx = QUERYParser.SpecialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_special)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(QUERYParser.T__1)
            self.state = 45
            self.special_name()
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QUERYParser.T__2:
                self.state = 46
                self.arguments()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Special_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(QUERYParser.NameContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_special_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecial_name" ):
                listener.enterSpecial_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecial_name" ):
                listener.exitSpecial_name(self)




    def special_name(self):

        localctx = QUERYParser.Special_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_special_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QUERYParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(QUERYParser.ArgumentContext,i)


        def getRuleIndex(self):
            return QUERYParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = QUERYParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(QUERYParser.T__2)
                self.state = 52
                self.argument()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QUERYParser.T__3:
                    self.state = 53
                    self.match(QUERYParser.T__3)
                    self.state = 54
                    self.argument()
                    self.state = 59
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 60
                self.match(QUERYParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(QUERYParser.T__2)
                self.state = 63
                self.match(QUERYParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(QUERYParser.ValueContext,0)


        def query(self):
            return self.getTypedRuleContext(QUERYParser.QueryContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = QUERYParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argument)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QUERYParser.T__6, QUERYParser.T__7, QUERYParser.T__8, QUERYParser.T__9, QUERYParser.T__11, QUERYParser.T__13, QUERYParser.T__14, QUERYParser.DIGITS, QUERYParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.value()
                pass
            elif token in [QUERYParser.T__5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(QUERYParser.T__5)
                self.state = 68
                self.query()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_value(self):
            return self.getTypedRuleContext(QUERYParser.List_valueContext,0)


        def set_value(self):
            return self.getTypedRuleContext(QUERYParser.Set_valueContext,0)


        def object_value(self):
            return self.getTypedRuleContext(QUERYParser.Object_valueContext,0)


        def number(self):
            return self.getTypedRuleContext(QUERYParser.NumberContext,0)


        def STRING(self):
            return self.getToken(QUERYParser.STRING, 0)

        def getRuleIndex(self):
            return QUERYParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = QUERYParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.list_value()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.set_value()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.object_value()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.number()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.match(QUERYParser.STRING)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.match(QUERYParser.T__6)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.match(QUERYParser.T__7)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 78
                self.match(QUERYParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QUERYParser.ValueContext)
            else:
                return self.getTypedRuleContext(QUERYParser.ValueContext,i)


        def getRuleIndex(self):
            return QUERYParser.RULE_list_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_value" ):
                listener.enterList_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_value" ):
                listener.exitList_value(self)




    def list_value(self):

        localctx = QUERYParser.List_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_list_value)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(QUERYParser.T__9)
                self.state = 82
                self.value()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QUERYParser.T__3:
                    self.state = 83
                    self.match(QUERYParser.T__3)
                    self.state = 84
                    self.value()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 90
                self.match(QUERYParser.T__10)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(QUERYParser.T__9)
                self.state = 93
                self.match(QUERYParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Set_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QUERYParser.ValueContext)
            else:
                return self.getTypedRuleContext(QUERYParser.ValueContext,i)


        def getRuleIndex(self):
            return QUERYParser.RULE_set_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSet_value" ):
                listener.enterSet_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSet_value" ):
                listener.exitSet_value(self)




    def set_value(self):

        localctx = QUERYParser.Set_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_set_value)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(QUERYParser.T__11)
                self.state = 97
                self.value()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QUERYParser.T__3:
                    self.state = 98
                    self.match(QUERYParser.T__3)
                    self.state = 99
                    self.value()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 105
                self.match(QUERYParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(QUERYParser.T__11)
                self.state = 108
                self.match(QUERYParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Object_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QUERYParser.PairContext)
            else:
                return self.getTypedRuleContext(QUERYParser.PairContext,i)


        def getRuleIndex(self):
            return QUERYParser.RULE_object_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject_value" ):
                listener.enterObject_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject_value" ):
                listener.exitObject_value(self)




    def object_value(self):

        localctx = QUERYParser.Object_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_object_value)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(QUERYParser.T__11)
                self.state = 112
                self.pair()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QUERYParser.T__3:
                    self.state = 113
                    self.match(QUERYParser.T__3)
                    self.state = 114
                    self.pair()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.match(QUERYParser.T__12)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(QUERYParser.T__11)
                self.state = 123
                self.match(QUERYParser.T__5)
                self.state = 124
                self.match(QUERYParser.T__12)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key(self):
            return self.getTypedRuleContext(QUERYParser.KeyContext,0)


        def value(self):
            return self.getTypedRuleContext(QUERYParser.ValueContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)




    def pair(self):

        localctx = QUERYParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.key()
            self.state = 128
            self.match(QUERYParser.T__5)
            self.state = 129
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(QUERYParser.STRING, 0)

        def number(self):
            return self.getTypedRuleContext(QUERYParser.NumberContext,0)


        def getRuleIndex(self):
            return QUERYParser.RULE_key

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKey" ):
                listener.enterKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKey" ):
                listener.exitKey(self)




    def key(self):

        localctx = QUERYParser.KeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_key)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QUERYParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(QUERYParser.STRING)
                pass
            elif token in [QUERYParser.T__13, QUERYParser.T__14, QUERYParser.DIGITS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.number()
                pass
            elif token in [QUERYParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(QUERYParser.T__6)
                pass
            elif token in [QUERYParser.T__7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.match(QUERYParser.T__7)
                pass
            elif token in [QUERYParser.T__8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 135
                self.match(QUERYParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(QUERYParser.DIGITS)
            else:
                return self.getToken(QUERYParser.DIGITS, i)

        def getRuleIndex(self):
            return QUERYParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = QUERYParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QUERYParser.T__13 or _la==QUERYParser.T__14:
                    self.state = 138
                    _la = self._input.LA(1)
                    if not(_la==QUERYParser.T__13 or _la==QUERYParser.T__14):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 141
                self.match(QUERYParser.DIGITS)
                self.state = 142
                self.match(QUERYParser.T__0)
                self.state = 143
                self.match(QUERYParser.DIGITS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QUERYParser.T__13 or _la==QUERYParser.T__14:
                    self.state = 144
                    _la = self._input.LA(1)
                    if not(_la==QUERYParser.T__13 or _la==QUERYParser.T__14):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 147
                self.match(QUERYParser.DIGITS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGITS(self, i:int=None):
            if i is None:
                return self.getTokens(QUERYParser.DIGITS)
            else:
                return self.getToken(QUERYParser.DIGITS, i)

        def LETTERS(self, i:int=None):
            if i is None:
                return self.getTokens(QUERYParser.LETTERS)
            else:
                return self.getToken(QUERYParser.LETTERS, i)

        def getRuleIndex(self):
            return QUERYParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = QUERYParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_name)
        self._la = 0 # Token type
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(QUERYParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(QUERYParser.T__7)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.match(QUERYParser.T__8)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(QUERYParser.DIGITS)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 155 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 154
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QUERYParser.T__13) | (1 << QUERYParser.T__15) | (1 << QUERYParser.DIGITS) | (1 << QUERYParser.LETTERS))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 157 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QUERYParser.T__13) | (1 << QUERYParser.T__15) | (1 << QUERYParser.DIGITS) | (1 << QUERYParser.LETTERS))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





